added spec for subscription and topic

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ grails-app/services
 linksharing.iml
 linksharing-grailsPlugins.iml
 .classpath
+.idea/
+.slcache/
+grails-app/conf/
+grails-app/controllers/
+grails-app/views/
+
